syntax = "proto3";

package Autobots.Infrastracture.DataLogCenter;

message DataLogRequest {
  string text = 1;
}

message DataLogResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service DataLogServiceDefinition {
  rpc CommitDataLog(DataLogRequest) returns (DataLogResponse);
}